Dubbele scrollbar weg & small fixes profile page #161

--- a/frontend/app/profile/profile.component.scss
+++ b/frontend/app/profile/profile.component.scss
@@ -1,6 +1,10 @@
 @import "../../_variables";
 @import "../shared/submenu";
 
+body, html{
+  overflow-x: visible;
+}
+
 .row {
   margin: 0;
 
@@ -45,6 +49,16 @@
   left: 0;
   z-index: 1;
   overflow: hidden;
+
+  h1{
+    margin-bottom: 15px;
+    font-size: 4em;
+
+    @media (max-width: $screen-xs) {
+      font-size: 3em;
+    }
+
+  }
 
   h4 {
     margin-bottom: 20px;
