--- a/frontend/site.scss
+++ b/frontend/site.scss
@@ -1,7 +1,6 @@
 @import "_variables";
 
 body, html {
-  overflow-x: hidden;
   height: 100%;
   width: 100%;
 }
